--- a/py/np.ipynb
+++ b/py/np.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Users\\eugene9721\\AppData\\Local\\Programs\\Python\\Python310\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/eugene9721/AppData/Local/Programs/Python/Python310/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1\n",
     "import numpy as np"
@@ -23,13 +12,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24.2\n",
+      "openblas64__info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "blas_ilp64_opt_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "openblas64__lapack_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "lapack_ilp64_opt_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
+      "    not found = AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+     ]
+    }
+   ],
    "source": [
     "# 2\n",
     "print(np.__version__)\n",
     "np.show_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3\n",
+    "Z = np.zeros(10)\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "800 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4\n",
+    "Z = np.zeros((10, 10))\n",
+    "print(\"%d bytes\" % (Z.size * Z.itemsize))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5\n",
+    "```\n",
+    "%run `python -c \"import numpy; numpy.info(numpy.add)\"`\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\n",
+    "Z = np.empty(10)\n",
+    "Z[4] = 1\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
+      " 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "Z = np.arange(10, 50)\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49 48 47 46 45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26\n",
+      " 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8\n",
+    "Z = np.arange(10, 50)\n",
+    "print(Z[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9\n",
+    "Z = np.arange(1, 10).reshape(3, 3)\n",
+    "print(Z)"
    ]
   }
  ],
@@ -40,7 +195,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
   "orig_nbformat": 4
