--- a/py/np.ipynb
+++ b/py/np.ipynb
@@ -2,59 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1\n",
+    "# 1. Import the numpy package under the name np\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.24.2\n",
-      "openblas64__info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['openblas\\\\lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
-      "    runtime_library_dirs = ['openblas\\\\lib']\n",
-      "blas_ilp64_opt_info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['openblas\\\\lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
-      "    runtime_library_dirs = ['openblas\\\\lib']\n",
-      "openblas64__lapack_info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['openblas\\\\lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
-      "    runtime_library_dirs = ['openblas\\\\lib']\n",
-      "lapack_ilp64_opt_info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['openblas\\\\lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
-      "    runtime_library_dirs = ['openblas\\\\lib']\n",
-      "Supported SIMD extensions in this NumPy install:\n",
-      "    baseline = SSE,SSE2,SSE3\n",
-      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
-      "    not found = AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+      "1.24.2\n"
      ]
     }
    ],
    "source": [
-    "# 2\n",
+    "# 2. Print the numpy version and the configuration\n",
     "print(np.__version__)\n",
-    "np.show_config()"
+    "#np.show_config()"
    ]
   },
   {
@@ -71,7 +43,7 @@
     }
    ],
    "source": [
-    "# 3\n",
+    "# 3. Create a null Vector of size 10\n",
     "Z = np.zeros(10)\n",
     "print(Z)"
    ]
@@ -90,7 +62,7 @@
     }
    ],
    "source": [
-    "# 4\n",
+    "# 4. How to find the memory size of any array\n",
     "Z = np.zeros((10, 10))\n",
     "print(\"%d bytes\" % (Z.size * Z.itemsize))"
    ]
@@ -100,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5\n",
+    "# 5. How to get the documentation of the numpy add function from the command line\n",
     "```\n",
     "%run `python -c \"import numpy; numpy.info(numpy.add)\"`\n",
     "```"
@@ -120,7 +92,7 @@
     }
    ],
    "source": [
-    "# 6\n",
+    "# 6. Create a null vector of size 10 but the fifth value witch is 1\n",
     "Z = np.empty(10)\n",
     "Z[4] = 1\n",
     "print(Z)"
@@ -141,7 +113,7 @@
     }
    ],
    "source": [
-    "#7\n",
+    "# 7. Create a vector with values ranging from 10 to 49\n",
     "Z = np.arange(10, 50)\n",
     "print(Z)"
    ]
@@ -161,7 +133,7 @@
     }
    ],
    "source": [
-    "#8\n",
+    "# 8. Reverse a vector (first element becomes last)\n",
     "Z = np.arange(10, 50)\n",
     "print(Z[::-1])"
    ]
@@ -182,9 +154,127 @@
     }
    ],
    "source": [
-    "#9\n",
+    "# 9. Create a 3x3 matrix with values ranging from 0 to 8\n",
     "Z = np.arange(1, 10).reshape(3, 3)\n",
     "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 4], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10. Find indices of non-zero elements from [1,2,0,0,4,0]\n",
+    "nz = np.nonzero([1,2,0,0,4,0])\n",
+    "print(nz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#11. Create a 3x3 identity matrix\n",
+    "np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.70628239, 0.22470743, 0.39232807],\n",
+       "        [0.84797768, 0.77896775, 0.28406007],\n",
+       "        [0.14093468, 0.52640479, 0.48179621]],\n",
+       "\n",
+       "       [[0.08804447, 0.85802704, 0.74467435],\n",
+       "        [0.91679891, 0.19201535, 0.80454416],\n",
+       "        [0.80854594, 0.82295466, 0.10778269]],\n",
+       "\n",
+       "       [[0.0365027 , 0.33619927, 0.47329974],\n",
+       "        [0.49048305, 0.10555753, 0.5091751 ],\n",
+       "        [0.38740919, 0.20508485, 0.40068484]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 12. Create a 3x3x3 array with random values\n",
+    "rd = np.random.random([3,3,3])\n",
+    "rd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0022239177823975 0.9804838375552981\n",
+      "0.0022239177823975 0.9804838375552981\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 13. Create a 10x10 array with random values and find the minimum and maximum values\n",
+    "\n",
+    "rd = np.random.random([10, 10])\n",
+    "print(np.min(rd), np.max(rd))\n",
+    "print(rd.min(), rd.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5095822761009964"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 14. Create a random vector of size 30 and find the mean value\n",
+    "re = np.random.random(30)\n",
+    "print(np.mean(re), re.mean())"
    ]
   }
  ],
