--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -2,4 +2,6 @@
 
 [[메시 기초] 절차적 그리드 (Catlikecoding)](https://doobudubu.tistory.com/329)
 
+### 08.05 - sat
 
+[[메시 기초] 큐브 렌더링 (Catlikecoding)](https://doobudubu.tistory.com/330)
