--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -7,3 +7,6 @@
 [[메시 기초] 큐브 렌더링 (Catlikecoding)](https://doobudubu.tistory.com/330)
 홍정모 그래픽스 새싹코스 챕터9 - 마우스로 물체 선택하기(Picking)
 
+### 08.06 - sun
+홍정모 그래픽스 새싹코스 챕터9 - 피킹 광선 충돌
+[[메시 기초] 둥근 큐브 렌더링 (Catlikecoding)](https://doobudubu.tistory.com/331)
