--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -9,4 +9,5 @@
 
 ### 08.06 - sun
 홍정모 그래픽스 새싹코스 챕터9 - 피킹 광선 충돌<br>
-[[메시 기초] 둥근 큐브 렌더링 (Catlikecoding)](https://doobudubu.tistory.com/331)
+[[메시 기초] 둥근 큐브 렌더링 (Catlikecoding)](https://doobudubu.tistory.com/331)<br>
+[230806 C++ 라이브러리](https://doobudubu.tistory.com/332)
