--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -13,5 +13,8 @@
 [230806 C++ 라이브러리](https://doobudubu.tistory.com/332)
 
 ### 08.07 - mon
-Rookiss 올인원 - 1.99%<br>
+Rookiss 올인원 - 1.99% (~1주차)<br>
 [[메시 기초] 큐브 구체 (Catlikecoding)](https://doobudubu.tistory.com/333)
+
+### 08.08 - mon
+Rookiss 올인원 - 2.65% (~1주차)<br>
