--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -18,3 +18,6 @@ Rookiss 올인원 - 1.99% (~1주차)<br>
 
 ### 08.08 - mon
 Rookiss 올인원 - 2.65% (~1주차)<br>
+
+### 08.10 - wed
+[[메시 기초] 메시 변형 (Catlikecoding)](https://doobudubu.tistory.com/334)
