--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -19,5 +19,8 @@ Rookiss 올인원 - 1.99% (~1주차)<br>
 ### 08.08 - mon
 Rookiss 올인원 - 2.65% (~1주차)<br>
 
-### 08.10 - wed
+### 08.10 - thu
 [[메시 기초] 메시 변형 (Catlikecoding)](https://doobudubu.tistory.com/334)
+
+### 08.11 - fri
+렌더링 - 행렬 -> 2.2 스케일까지 진행
