--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -24,3 +24,6 @@ Rookiss 올인원 - 2.65% (~1주차)<br>
 
 ### 08.11 - fri
 렌더링 - 행렬 -> 2.2 스케일까지 진행
+
+### 08.12 - sat
+[[렌더링] 행렬 (Catlikecoding)](https://doobudubu.tistory.com/335)
