--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -27,3 +27,5 @@ Rookiss 올인원 - 2.65% (~1주차)<br>
 
 ### 08.12 - sat
 [[렌더링] 행렬 (Catlikecoding)](https://doobudubu.tistory.com/335)
+렌더링 - 셰이더 기초 진행중 (~2)
+Rookiss 올인원 - 7.95% (~1주차)<br>
