--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -29,3 +29,8 @@ Rookiss 올인원 - 2.65% (~1주차)<br>
 [[렌더링] 행렬 (Catlikecoding)](https://doobudubu.tistory.com/335)
 렌더링 - 셰이더 기초 진행중 (~2)
 Rookiss 올인원 - 7.95% (~1주차)<br>
+
+### 08.13 - sun
+홍랩 코테용 C++ 핵심 정리 완강
+렌더링 - 셰이더 기초 진행중 (~4.2)
+Rookiss 올인원 - 9.27% (~1주차)<br>
