--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -26,14 +26,19 @@ Rookiss 올인원 - 2.65% (~1주차)<br>
 렌더링 - 행렬 -> 2.2 스케일까지 진행
 
 ### 08.12 - sat
-[[렌더링] 행렬 (Catlikecoding)](https://doobudubu.tistory.com/335)
-렌더링 - 셰이더 기초 진행중 (~2)
+[[렌더링] 행렬 (Catlikecoding)](https://doobudubu.tistory.com/335)<br>
+렌더링 - 셰이더 기초 진행중 (~2)<br>
 Rookiss 올인원 - 7.95% (~1주차)<br>
 
 ### 08.13 - sun
-홍랩 코테용 C++ 핵심 정리 완강
-렌더링 - 셰이더 기초 진행중 (~4.2)
+홍랩 코테용 C++ 핵심 정리 완강<br>
+렌더링 - 셰이더 기초 진행중 (~4.2)<br>
 Rookiss 올인원 - 9.27% (~1주차)<br>
 
 ### 08.14 - mon
 [[렌더링] 셰이더 기초 (Catlikecoding)](https://doobudubu.tistory.com/336)
+
+### 08.15 - tue
+홍정모 그래픽스 새싹코트 챕터9 - 쿼터니언, 회전<br>
+[Ganshin-Impact, Feature/052 common popup UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/94)<br>
+[Ganshin-Impact, Feature/053 common toast](https://github.com/eugene-doobu/Ganshin-Impact/pull/95)
