--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -16,7 +16,7 @@
 Rookiss 올인원 - 1.99% (~1주차)<br>
 [[메시 기초] 큐브 구체 (Catlikecoding)](https://doobudubu.tistory.com/333)
 
-### 08.08 - mon
+### 08.08 - tue
 Rookiss 올인원 - 2.65% (~1주차)<br>
 
 ### 08.10 - thu
@@ -42,3 +42,10 @@ Rookiss 올인원 - 9.27% (~1주차)<br>
 홍정모 그래픽스 새싹코트 챕터9 - 쿼터니언, 회전<br>
 [Ganshin-Impact, Feature/052 common popup UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/94)<br>
 [Ganshin-Impact, Feature/053 common toast](https://github.com/eugene-doobu/Ganshin-Impact/pull/95)
+
+### 08.15 - wed
+[Ganshin-Impact, Feature/055 loading UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/97)
+
+### 08.16 - thu
+unreal engine 5.1.1 , Rider 2023.2 다운로드 및 unreal - rider 연동<br>
+이득우의 언리얼 프로그래밍 Part1 - 언리얼 C++의 이해 - 12.50%
