--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -43,9 +43,13 @@ Rookiss 올인원 - 9.27% (~1주차)<br>
 [Ganshin-Impact, Feature/052 common popup UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/94)<br>
 [Ganshin-Impact, Feature/053 common toast](https://github.com/eugene-doobu/Ganshin-Impact/pull/95)
 
-### 08.15 - wed
+### 08.16 - wed
 [Ganshin-Impact, Feature/055 loading UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/97)
 
-### 08.16 - thu
+### 08.17 - thu
 unreal engine 5.1.1 , Rider 2023.2 다운로드 및 unreal - rider 연동<br>
 이득우의 언리얼 프로그래밍 Part1 - 언리얼 C++의 이해 - 12.50%
+
+### 08.19 - sat
+이득우의 언리얼 프로그래밍 Part1 - 언리얼 C++의 이해 - 31.25%<br>
+[Ganshin-Impact, Feature/056 intro UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/98)
