--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -57,3 +57,8 @@ unreal engine 5.1.1 , Rider 2023.2 다운로드 및 unreal - rider 연동<br>
 ### 08.20 - sun
 이득우의 언리얼 프로그래밍 Part1 - 언리얼 C++의 이해 - 43.75%<br>
 [Ganshin-Impact, Feature/059 village scene](https://github.com/eugene-doobu/Ganshin-Impact/pull/102)
+
+### 08.21 - mon
+
+야근
+
