--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -62,3 +62,10 @@ unreal engine 5.1.1 , Rider 2023.2 다운로드 및 unreal - rider 연동<br>
 
 야근
 
+### 08.22 - tue
+
+야근<br>
+[Ganshin-Impact, [054] 공통 UI 문서 정리](https://github.com/eugene-doobu/Ganshin-Impact/issues/90)
+
+
+
