--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -68,4 +68,7 @@ unreal engine 5.1.1 , Rider 2023.2 다운로드 및 unreal - rider 연동<br>
 [Ganshin-Impact, [054] 공통 UI 문서 정리](https://github.com/eugene-doobu/Ganshin-Impact/issues/90)
 
 
+### 08.24 - thu
+
+Ganshin-Impact, [063] 미니맵 UI 제작 진행중
 
