--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -72,3 +72,8 @@ unreal engine 5.1.1 , Rider 2023.2 다운로드 및 unreal - rider 연동<br>
 
 Ganshin-Impact, [063] 미니맵 UI 제작 진행중
 
+### 08.25 - fri
+
+[Ganshin-Impact, Feature/063 minimap UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/112)<br>
+Rookiss 올인원 - 10.60% (~2주차)
+
