--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -77,3 +77,8 @@ Ganshin-Impact, [063] 미니맵 UI 제작 진행중
 [Ganshin-Impact, Feature/063 minimap UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/112)<br>
 Rookiss 올인원 - 10.60% (~2주차)
 
+### 08.25 - sat
+
+Ganshin-Impact, [066] 인벤토리 UI 제작 진행중<br>
+홍정모연구소 자료구조 압축코드 파트1<br>
+Rookiss 올인원 - 13.95% (~2주차)
