--- a/_/2023_8.md
+++ b/_/2023_8.md
@@ -82,3 +82,7 @@ Rookiss 올인원 - 10.60% (~2주차)
 Ganshin-Impact, [066] 인벤토리 UI 제작 진행중<br>
 홍정모연구소 자료구조 압축코드 파트1<br>
 Rookiss 올인원 - 13.95% (~2주차)
+
+### 08.26 - sun
+
+Rookiss 올인원 - 21.85% (~4주차)
