--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -3,3 +3,7 @@
 honglab datastructure - on chapter 1<br>
 Rookiss 올인원 - 25.83% (~4주차)
 
+### 09.03 - sat
+
+[Ganshin-Impact, Feature/066 inventory](https://github.com/eugene-doobu/Ganshin-Impact/pull/122)<br>
+[Ganshin-Impact, Feature/071 monster state](https://github.com/eugene-doobu/Ganshin-Impact/pull/123)
