--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -7,3 +7,10 @@ Rookiss 올인원 - 25.83% (~4주차)
 
 [Ganshin-Impact, Feature/066 inventory](https://github.com/eugene-doobu/Ganshin-Impact/pull/122)<br>
 [Ganshin-Impact, Feature/071 monster state](https://github.com/eugene-doobu/Ganshin-Impact/pull/123)
+
+## 09.04 - sun
+[Ganshin-Impact, Feature/070 imporve camera](https://github.com/eugene-doobu/Ganshin-Impact/pull/124)<br>
+Rookiss 올인원 - 33.11% (~4주차)
+
+## 09.05 - mon
+야근
