--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -1,16 +1,19 @@
-### 09.02 - fri
+### 09.01 - fri
 
 honglab datastructure - on chapter 1<br>
 Rookiss 올인원 - 25.83% (~4주차)
 
-### 09.03 - sat
+### 09.02 - sat
 
 [Ganshin-Impact, Feature/066 inventory](https://github.com/eugene-doobu/Ganshin-Impact/pull/122)<br>
 [Ganshin-Impact, Feature/071 monster state](https://github.com/eugene-doobu/Ganshin-Impact/pull/123)
 
-## 09.04 - sun
+## 09.03 - sun
 [Ganshin-Impact, Feature/070 imporve camera](https://github.com/eugene-doobu/Ganshin-Impact/pull/124)<br>
 Rookiss 올인원 - 33.11% (~4주차)
 
-## 09.05 - mon
+## 09.04 - mon
 야근
+
+## 09.05 - tue
+Ganshin-Impact, [072] 캐릭터 조작 개선 진행중<br>
