--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -17,3 +17,9 @@ Rookiss 올인원 - 33.11% (~4주차)
 
 ## 09.05 - tue
 Ganshin-Impact, [072] 캐릭터 조작 개선 진행중<br>
+
+## 09.05 - wed
+[Ganshin-Impact, Feature/060 user trigger](https://github.com/eugene-doobu/Ganshin-Impact/pull/125)<br>
+
+## 09.06 - thu
+Ganshin-Impact, [062] 대화 시스템 진행중
