--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -23,3 +23,7 @@ Ganshin-Impact, [072] 캐릭터 조작 개선 진행중<br>
 
 ## 09.06 - thu
 Ganshin-Impact, [062] 대화 시스템 진행중
+
+## 09.10 - sun
+[Ganshin-Impact, Feature/063 npc dialogue](https://github.com/eugene-doobu/Ganshin-Impact/pull/126)<br>
+Rookiss 올인원 - 35.10% (~4주차)
