--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -30,3 +30,9 @@ Rookiss 올인원 - 35.10% (~4주차)
 
 ## 09.11 mon
 Ganshin-Impact, [064] 로그 UI 진행중 - UI프리팹 제작
+
+## 09.17 - sun
+[Ganshin-Impact, Feature/064 log interaction UI](https://github.com/eugene-doobu/Ganshin-Impact/pull/127)<br>
+
+## 09.18 - mun
+Rookiss 올인원 - 37.75% (~4주차)
