--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -36,3 +36,7 @@ Ganshin-Impact, [064] 로그 UI 진행중 - UI프리팹 제작
 
 ## 09.18 - mun
 Rookiss 올인원 - 37.75% (~4주차)
+
+## 09.19 - tue
+Catlikecoding - first light 진행<br>
+루키스 뱀파이어 서바이벌 모작 진행중
