--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -40,3 +40,7 @@ Rookiss 올인원 - 37.75% (~4주차)
 ## 09.19 - tue
 Catlikecoding - first light 진행<br>
 루키스 뱀파이어 서바이벌 모작 진행중
+
+## 09.24 - sun
+루키스 뱀파이어 서바이벌 모작 - 50%<br>
+이력서 정리
