--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -44,3 +44,6 @@ Catlikecoding - first light 진행<br>
 ## 09.24 - sun
 루키스 뱀파이어 서바이벌 모작 - 50%<br>
 이력서 정리
+
+## 09.29 - fri
+[루키스 뱀파이어 서바이벌 모작](https://www.youtube.com/watch?v=-9ilF_wJHIQ)
