--- a/_/2023_9.md
+++ b/_/2023_9.md
@@ -47,3 +47,7 @@ Catlikecoding - first light 진행<br>
 
 ## 09.29 - fri
 [루키스 뱀파이어 서바이벌 모작](https://www.youtube.com/watch?v=-9ilF_wJHIQ)
+
+## 09.30 - sat
+이득우의 언리얼 프로그래밍 Part1 - 언리얼 C++의 이해 - 62.50%<br>
+Rookiss 올인원 - 42.38%
