--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -1,3 +1,6 @@
 ### 10.04 - wed
-
 Rookiss 올인원 - 43.71% (~5주차)
+
+### 10.05 - thu
+Rookiss 올인원, section10: Windows API입문 학습중 - 47.02%<br>
+이득우 언리얼 part1. - 직렬화
