--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -4,3 +4,7 @@ Rookiss 올인원 - 43.71% (~5주차)
 ### 10.05 - thu
 Rookiss 올인원, section10: Windows API입문 학습중 - 47.02%<br>
 이득우 언리얼 part1. - 직렬화
+
+### 10.06 - fri
+Ganshin-Impact, Custom World Space UI 기반 작업<br>
+Rookiss 올인원, section10: Windows API입문 학습중 - 49.01%
