--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -1,3 +1,6 @@
+## 성과
+[이득우 언리얼 part1 - 완강](https://www.inflearn.com/course/%EC%9D%B4%EB%93%9D%EC%9A%B0-%EC%96%B8%EB%A6%AC%EC%96%BC-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-part-1/dashboard)
+
 ### 10.04 - wed
 Rookiss 올인원 - 43.71% (~5주차)
 
@@ -8,3 +11,6 @@ Rookiss 올인원, section10: Windows API입문 학습중 - 47.02%<br>
 ### 10.06 - fri
 Ganshin-Impact, Custom World Space UI 기반 작업<br>
 Rookiss 올인원, section10: Windows API입문 학습중 - 49.01%
+
+### 10.08 - sun
+이득우 언리얼 part1 - 완강<br>,
