--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -13,4 +13,8 @@ Ganshin-Impact, Custom World Space UI 기반 작업<br>
 Rookiss 올인원, section10: Windows API입문 학습중 - 49.01%
 
 ### 10.08 - sun
-이득우 언리얼 part1 - 완강<br>,
+이득우 언리얼 part1 - 완강<br>
+
+### 10.09 - mon
+UE5 Lyra 샘플 코드 분석<br>
+Rokiss C# 유니티 Part8. EFCore - 37.04%
