--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -18,3 +18,6 @@ Rookiss 올인원, section10: Windows API입문 학습중 - 49.01%
 ### 10.09 - mon
 UE5 Lyra 샘플 코드 분석<br>
 Rokiss C# 유니티 Part8. EFCore - 37.04%
+
+### 10.11 - wed
+Rokiss C# 유니티 Part8. EFCore - 81.48%
