--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -1,5 +1,7 @@
 ## 성과
-[이득우 언리얼 part1 - 완강](https://www.inflearn.com/course/%EC%9D%B4%EB%93%9D%EC%9A%B0-%EC%96%B8%EB%A6%AC%EC%96%BC-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-part-1/dashboard)
+[이득우 언리얼 part1 - 완강](https://www.inflearn.com/certificate/1095125-330717-12071614)<br>
+[Rokiss C# 유니티 Part8. EFCore - 완강](https://www.inflearn.com/certificate/1095125-325822-11556640)<br>
+[CUDA 프로그래밍 part3. Memory Hierarchy 완강](https://www.inflearn.com/certificate/1095125-329600-11788666)
 
 ### 10.04 - wed
 Rookiss 올인원 - 43.71% (~5주차)
@@ -21,3 +23,7 @@ Rokiss C# 유니티 Part8. EFCore - 37.04%
 
 ### 10.11 - wed
 Rokiss C# 유니티 Part8. EFCore - 81.48%
+
+### 10.13 - fri
+Rokiss C# 유니티 Part8. EFCore - 완강<br>
+CUDA 프로그래밍 part3 - 완강
