--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -1,7 +1,8 @@
 ## 성과
 [이득우 언리얼 part1 - 완강](https://www.inflearn.com/certificate/1095125-330717-12071614)<br>
 [Rokiss C# 유니티 Part8. EFCore - 완강](https://www.inflearn.com/certificate/1095125-325822-11556640)<br>
-[CUDA 프로그래밍 part3. Memory Hierarchy 완강](https://www.inflearn.com/certificate/1095125-329600-11788666)
+[CUDA 프로그래밍 part3. Memory Hierarchy 완강](https://www.inflearn.com/certificate/1095125-329600-11788666)<br>
+[삼각형의 실전! CMake 초급 완강](https://www.inflearn.com/certificate/1095125-330385-12071613)
 
 ### 10.04 - wed
 Rookiss 올인원 - 43.71% (~5주차)
@@ -27,3 +28,6 @@ Rokiss C# 유니티 Part8. EFCore - 81.48%
 ### 10.13 - fri
 Rokiss C# 유니티 Part8. EFCore - 완강<br>
 CUDA 프로그래밍 part3 - 완강
+
+## 10.14 - sat
+삼각형의 실전! CMake 초급 완강<br>
