--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -29,9 +29,13 @@ Rokiss C# 유니티 Part8. EFCore - 81.48%
 Rokiss C# 유니티 Part8. EFCore - 완강<br>
 CUDA 프로그래밍 part3 - 완강
 
-## 10.14 - sat
+###  10.14 - sat
 삼각형의 실전! CMake 초급 완강<br>
 
-# 10.15 - sun
-Rokiss 언리얼 입문 Part5. VR - 27.27%
+###  10.15 - sun
+Rokiss 언리얼 입문 Part5. VR - 27.27%<br>
 언리얼 엔진 프로젝트 환경 구축
+
+###  10.16 - mon
+Rokiss 언리얼 입문 Part5. VR - 36.36%<br>
+Lyra 프로젝트 분석 - GameMode
