--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -39,3 +39,7 @@ Rokiss 언리얼 입문 Part5. VR - 27.27%<br>
 ###  10.16 - mon
 Rokiss 언리얼 입문 Part5. VR - 36.36%<br>
 Lyra 프로젝트 분석 - GameMode
+
+### 10.17 - tue
+Rokiss 언리얼 입문 Part5. VR - 59.09%<br>
+백준 - 11724, 16964, 16940
