--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -43,3 +43,11 @@ Lyra 프로젝트 분석 - GameMode
 ### 10.17 - tue
 Rokiss 언리얼 입문 Part5. VR - 59.09%<br>
 백준 - 11724, 16964, 16940
+
+### 10.18 - wed
+Rokiss 언리얼 입문 Part5. VR - 59.09%<br>
+이득우 언리얼 part2. - <br>
+백준 - 1374
+
+### 10.22 - sun
+Rokiss 언리얼 입문 Part5. VR - 72.73%
