--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -51,3 +51,7 @@ Rokiss 언리얼 입문 Part5. VR - 59.09%<br>
 
 ### 10.22 - sun
 Rokiss 언리얼 입문 Part5. VR - 72.73%
+
+### 10.23 - mon
+Rokiss 언리얼 입문 Part5. VR - 81.82%<br>
+Lyra 프로젝트 분석 - CDO, Game Play Tag, Game Feature, etc...
