--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -55,3 +55,8 @@ Rokiss 언리얼 입문 Part5. VR - 72.73%
 ### 10.23 - mon
 Rokiss 언리얼 입문 Part5. VR - 81.82%<br>
 Lyra 프로젝트 분석 - CDO, Game Play Tag, Game Feature, etc...
+
+### 10.24 - tue
+Rokiss 언리얼 입문 Part5. VR - 디버깅<br>
+Rookiss 올인원, section11: 게임 수학 학습 중 - 59.60%<br>
+백준 - 2225, 15686
