--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -2,7 +2,8 @@
 [이득우 언리얼 part1 - 완강](https://www.inflearn.com/certificate/1095125-330717-12071614)<br>
 [Rokiss C# 유니티 Part8. EFCore - 완강](https://www.inflearn.com/certificate/1095125-325822-11556640)<br>
 [CUDA 프로그래밍 part3. Memory Hierarchy 완강](https://www.inflearn.com/certificate/1095125-329600-11788666)<br>
-[삼각형의 실전! CMake 초급 완강](https://www.inflearn.com/certificate/1095125-330385-12071613)
+[삼각형의 실전! CMake 초급 완강](https://www.inflearn.com/certificate/1095125-330385-12071613)<br>
+[Rokiss 언리얼 입문 Part5. VR - 완강](https://www.inflearn.com/certificate/1095125-329330-11867118)
 
 ### 10.04 - wed
 Rookiss 올인원 - 43.71% (~5주차)
@@ -60,3 +61,7 @@ Lyra 프로젝트 분석 - CDO, Game Play Tag, Game Feature, etc...
 Rokiss 언리얼 입문 Part5. VR - 디버깅<br>
 Rookiss 올인원, section11: 게임 수학 학습 중 - 59.60%<br>
 백준 - 2225, 15686
+
+### 10.26 - thu
+Rokiss 언리얼 입문 Part5. VR - 완강<br>
+Rookiss 올인원, section11: 게임 수학 학습 중 - 62.91%
