--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -63,5 +63,10 @@ Rookiss 올인원, section11: 게임 수학 학습 중 - 59.60%<br>
 백준 - 2225, 15686
 
 ### 10.26 - thu
-Rokiss 언리얼 입문 Part5. VR - 완강<br>
+Rookiss 언리얼 입문 Part5. VR - 완강<br>
 Rookiss 올인원, section11: 게임 수학 학습 중 - 62.91%
+
+### 10.27 - fri
+Rookiss 언리얼 입문 Part5. VR - 디버깅, 영상촬영<br>
+Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 65.56%
+
