--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -70,3 +70,6 @@ Rookiss 올인원, section11: 게임 수학 학습 중 - 62.91%
 Rookiss 언리얼 입문 Part5. VR - 디버깅, 영상촬영<br>
 Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 65.56%
 
+### 10.29 - sun
+Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 66.23%<br>
+백준 - 2468
