--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -5,6 +5,10 @@
 [삼각형의 실전! CMake 초급 완강](https://www.inflearn.com/certificate/1095125-330385-12071613)<br>
 [Rokiss 언리얼 입문 Part5. VR - 완강](https://www.inflearn.com/certificate/1095125-329330-11867118)
 
+## 영상 업로드
+[Fortress [Windows API]](https://www.youtube.com/watch?v=iZSM4Cw7OHE)<br>
+[Unreal5 VR Interaction Tutorial](https://www.youtube.com/watch?v=_dKGnKZhvdA)<br>
+
 ### 10.04 - wed
 Rookiss 올인원 - 43.71% (~5주차)
 
