--- a/_/2023_10.md
+++ b/_/2023_10.md
@@ -77,3 +77,7 @@ Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 65.56%
 ### 10.29 - sun
 Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 66.23%<br>
 백준 - 2468
+
+### 10.30 - mun
+Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 67.55%<br>
+Lyra 프로젝트 분석 - PawnExtensionComponent, HeroComponent, CameraManager
