--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -1,2 +1,5 @@
 ### 11.03 - thu
-Rookiss 올인원, section12: 2D 게임 프레임워크 설계 - 72.85%
+Rookiss 올인원, section13: 2D 포폴 준비 학습중 - 72.85%
+
+### 11.03 - fri
+Rookiss 올인원, section14: 멀티쓰레드 프로그래밍 학습중 - 77.48%
