--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -3,3 +3,7 @@ Rookiss 올인원, section13: 2D 포폴 준비 학습중 - 72.85%
 
 ### 11.03 - fri
 Rookiss 올인원, section14: 멀티쓰레드 프로그래밍 학습중 - 77.48%
+
+### 11.04 - sat
+[Effective Modern C++ - 소개](https://www.yes24.com/Product/Goods/20288684)<br>
+Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 79.47%
