--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -7,3 +7,7 @@ Rookiss 올인원, section14: 멀티쓰레드 프로그래밍 학습중 - 77.48%
 ### 11.04 - sat
 [Effective Modern C++ - 소개](https://www.yes24.com/Product/Goods/20288684)<br>
 Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 79.47%
+
+### 11.06 - mon
+Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 86.09%<br>
+project setting - Gan3DAudioVisualizer
