--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -11,3 +11,6 @@ Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 79.47%
 ### 11.06 - mon
 Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 86.09%<br>
 project setting - Gan3DAudioVisualizer
+
+- node js + typescript 기반 프로젝트 설정
+- webgpu기반 삼각형 렌더링 테스트
