--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -14,3 +14,6 @@ project setting - Gan3DAudioVisualizer
 
 - node js + typescript 기반 프로젝트 설정
 - webgpu기반 삼각형 렌더링 테스트
+
+### 11.07 - tue
+Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 90.73%<br>
