--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -17,3 +17,6 @@ project setting - Gan3DAudioVisualizer
 
 ### 11.07 - tue
 Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 90.73%<br>
+
+### 11.07 - wed
+Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 92.05%<br>
