--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -18,5 +18,11 @@ project setting - Gan3DAudioVisualizer
 ### 11.07 - tue
 Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 90.73%<br>
 
-### 11.07 - wed
+### 11.08 - wed
 Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 92.05%<br>
+
+### 11.09 - thu
+Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 93.38%<br>
+project setting - Gan3DAudioVisualizer
+
+- mesh, meshData 데이터 renderer 클래스에서 분리
