--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -26,3 +26,6 @@ Rookiss 올인원, section15: 소켓 프로그래밍 학습중 - 93.38%<br>
 project setting - Gan3DAudioVisualizer
 
 - mesh, meshData 데이터 renderer 클래스에서 분리
+
+### 11.10 - fri
+Rookiss 올인원, section16: 온라인 게임 - 98.01%<br>
