--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -29,3 +29,8 @@ project setting - Gan3DAudioVisualizer
 
 ### 11.10 - fri
 Rookiss 올인원, section16: 온라인 게임 - 98.01%<br>
+
+### 11.14 - mon
+project setting - Gan3DAudioVisualizer
+
+- vertex shader에 uniform buffer를 통해 camera matrix 전송 후 적용
