--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -1,3 +1,9 @@
+## 성과
+[[게임 프로그래머 입문 올인원] C++ & 자료구조/알고리즘 & STL & 게임 수학 & Windows API & 게임 서버](https://www.inflearn.com/certificate/57885-329593-12048304)<br>
+
+## 영상 업로드
+[Fortress [Windows API]](https://www.youtube.com/watch?v=iZSM4Cw7OHE)<br>
+
 ### 11.03 - thu
 Rookiss 올인원, section13: 2D 포폴 준비 학습중 - 72.85%
 
@@ -34,3 +40,8 @@ Rookiss 올인원, section16: 온라인 게임 - 98.01%<br>
 project setting - Gan3DAudioVisualizer
 
 - vertex shader에 uniform buffer를 통해 camera matrix 전송 후 적용
+
+### 11.15 - tue
+
+Rookiss 올인원 완강<br>
+Rookiss C++ Unreal Part2 게임수학과 DirectX12 - 13.56%<br>
