--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -36,12 +36,16 @@ project setting - Gan3DAudioVisualizer
 ### 11.10 - fri
 Rookiss 올인원, section16: 온라인 게임 - 98.01%<br>
 
-### 11.14 - mon
+### 11.13 - mon
 project setting - Gan3DAudioVisualizer
 
 - vertex shader에 uniform buffer를 통해 camera matrix 전송 후 적용
 
-### 11.15 - tue
+### 11.14 - tue
 
 Rookiss 올인원 완강<br>
 Rookiss C++ Unreal Part2 게임수학과 DirectX12 - 13.56%<br>
+
+### 11.15 - wed
+
+Honglab 그래픽스 파트3 복습중 - 22%
