--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -49,3 +49,9 @@ Rookiss C++ Unreal Part2 게임수학과 DirectX12 - 13.56%<br>
 ### 11.15 - wed
 
 Honglab 그래픽스 파트3 복습중 - 22%
+
+### 11.16 - thu
+
+
+Honglab 그래픽스 파트3 복습완료<br>
+Honglab 그래픽스 파트3 챕터 9.사용자 상호작용 - 24%
