--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -52,6 +52,9 @@ Honglab 그래픽스 파트3 복습중 - 22%
 
 ### 11.16 - thu
 
-
 Honglab 그래픽스 파트3 복습완료<br>
 Honglab 그래픽스 파트3 챕터 9.사용자 상호작용 - 24%
+
+### 11.17 fri
+
+Honglab 그래픽스 파트3 챕터 10.기하 파이프라인 - 36%
