--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -69,3 +69,6 @@ Rookiss DirectX11 - 2.63%
 
 ### 11.27 mon
 apply-cube-map - Gan3DAudioVisualizer
+
+### 11.29 wed
+basic-page-design - Gan3DAudioVisualizer
