--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -64,7 +64,6 @@ Honglab 그래픽스 파트3 챕터 10.기하 파이프라인 - 36%
 win api 프로젝트 환경설정
 
 ### 11.19 sun
-
 Rookiss DirectX11 - 2.63%
 
 ### 11.27 mon
@@ -72,3 +71,6 @@ apply-cube-map - Gan3DAudioVisualizer
 
 ### 11.29 wed
 basic-page-design - Gan3DAudioVisualizer
+
+### 11.30 thu
+Rookiss DirectX11 - 3.51%
