--- a/_/2023_11.md
+++ b/_/2023_11.md
@@ -2,7 +2,7 @@
 [[게임 프로그래머 입문 올인원] C++ & 자료구조/알고리즘 & STL & 게임 수학 & Windows API & 게임 서버](https://www.inflearn.com/certificate/57885-329593-12048304)<br>
 
 ## 영상 업로드
-[Fortress [Windows API]](https://www.youtube.com/watch?v=iZSM4Cw7OHE)<br>
+[게임 프로그래머 입문 올인원 강좌](https://www.youtube.com/watch?v=pXdY3Wb2g84)<br>
 
 ### 11.03 - thu
 Rookiss 올인원, section13: 2D 포폴 준비 학습중 - 72.85%
