--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -1,3 +1,8 @@
 ### 12.01 - fri
+
 젤다 프로젝트 일감 생성<br>
 이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 25%<br>
+
+### 12.02 - sat
+
+이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 애니메이션 에셋 추가<br>
