--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -6,3 +6,8 @@
 ### 12.02 - sat
 
 이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 애니메이션 에셋 추가<br>
+
+### 12.03 - sun
+
+이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 37%<br>
+LiseOfGan - 작업 전 기획
