--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -11,3 +11,8 @@
 
 이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 37%<br>
 LiseOfGan - 작업 전 기획
+
+### 12.04 - mon
+
+이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 43.75%<br>
+code refactor - Gan3DAudioVisualizer
