--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -16,3 +16,7 @@ LiseOfGan - 작업 전 기획
 
 이득우 언리얼 part2. 게임 콘텐츠의 기본 구조 - 43.75%<br>
 code refactor - Gan3DAudioVisualizer
+
+### 12.05 - tue
+
+과제진행을 위한 자료정리
