--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -24,3 +24,9 @@ code refactor - Gan3DAudioVisualizer
 ### 12.07 - thu
 
 과제 진행
+
+### 12.08 - fri
+
+공부 
+- 3가지 UI Mask와 사용법 [Best Tips & Tricks by Unity Japan]
+- 7분 만에 알아보는 Prefab 변경 사항 [Best Tips & Tricks by Unity Japan]
