--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -34,3 +34,7 @@ code refactor - Gan3DAudioVisualizer
 ### 12.11 - mon
 
 audio analyser - Gan3DAudioVisualizer
+
+### 12.17 - sun
+
+audio to mesh - Gan3DAudioVisualizer
