--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -37,4 +37,5 @@ audio analyser - Gan3DAudioVisualizer
 
 ### 12.17 - sun
 
-audio to mesh - Gan3DAudioVisualizer
+audio to mesh - Gan3DAudioVisualizer<br>
+기술면접 관련 공부
