--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -43,3 +43,10 @@ audio to mesh - Gan3DAudioVisualizer
 
 lighting - Gan3DAudioVisualizer<br>
 기술면접 관련 공부
+
+### 12.19 - tue
+
+유니티 관련 이론 학습<br>
+글작성: [[Unity] 가비지 컬렉션, 베스트 프래틱스](https://doobudubu.tistory.com/338)
+
+### 12.20 - wed
