--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -50,3 +50,7 @@ lighting - Gan3DAudioVisualizer<br>
 글작성: [[Unity] 가비지 컬렉션, 베스트 프래틱스](https://doobudubu.tistory.com/338)
 
 ### 12.20 - wed
+
+이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 6.67%<br>
+유니티 관련 이론 학습<br>
+docs - Gan3DAudioVisualizer
