--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -54,3 +54,7 @@ lighting - Gan3DAudioVisualizer<br>
 이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 6.67%<br>
 유니티 관련 이론 학습<br>
 docs - Gan3DAudioVisualizer
+
+### 12.22 - fri
+
+이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 25%
