--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -58,3 +58,8 @@ docs - Gan3DAudioVisualizer
 ### 12.22 - fri
 
 이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 25%
+
+### 12.23 - sat
+
+이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 33.33%<br>
+catlikecoding - hex map tutorials (2/27)
