--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -63,3 +63,9 @@ docs - Gan3DAudioVisualizer
 
 이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 33.33%<br>
 catlikecoding - hex map tutorials (2/27)
+
+### 12.24 - sun
+
+이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 46.67%<br>
+catlikecoding - hex map tutorials (3/27)
+
