--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -69,3 +69,7 @@ catlikecoding - hex map tutorials (2/27)
 이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 46.67%<br>
 catlikecoding - hex map tutorials (3/27)
 
+
+### 12.25 - mon
+
+이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 66.67%<br>
