--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -74,6 +74,9 @@ catlikecoding - hex map tutorials (3/27)
 
 이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 66.67%<br>
 
-### 12.30 - sun
+### 12.30 - sat
 
 이득우 언리얼 part3. 네트웍 멀티플레이 프레임웍의 이해 - 100%<br>
+
+### 12.31 - sun
+obj exporter - Gan3DAudioVisualizer
