--- a/_/2023_12.md
+++ b/_/2023_12.md
@@ -1,3 +1,6 @@
+## 영상 업로드
+[이득우의 언리얼 프로그래밍 Part3 - 네트웍 멀티플레이 프레임웍의 이해](https://youtu.be/ewyteS3TD5k?si=LBkuwhz1EqRxOC1i)<br>
+
 ### 12.01 - fri
 
 젤다 프로젝트 일감 생성<br>
