--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -8,3 +8,12 @@ wasdqe-movement - Gan3DAudioVisualizer<br>
 경영진 면접
 camera-movement - Gan3DAudioVisualizer<br>
 webgpu-practice-0, 코드부분, ~part3
+
+### 01.04 thu
+
+TRPL - guessing_game
+
+### 01.05 fri
+
+user parameter - Gan3DAudioVisualizer<br>
+bugfix 및 문서정리 - Gan3DAudioVisualizer<br>
