--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -17,3 +17,6 @@ TRPL - guessing_game
 
 user parameter - Gan3DAudioVisualizer<br>
 bugfix 및 문서정리 - Gan3DAudioVisualizer<br>
+
+### 01.08 mon
+Ganshin-Impact, [080] Zenject제거 작업중
