--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -20,3 +20,13 @@ bugfix 및 문서정리 - Gan3DAudioVisualizer<br>
 
 ### 01.08 mon
 Ganshin-Impact, [080] Zenject제거 작업중
+
+### 01.09 tue
+Ganshin-Impact, [080] Zenject제거
+
+### 01.10 wed
+Ganshin-Impact, [044] 오브젝트 관리
+
+### 01.10 thu
+Ganshin-Impact, [072] 캐릭터 조작 개선
+
