--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -30,3 +30,5 @@ Ganshin-Impact, [044] 오브젝트 관리
 ### 01.10 thu
 Ganshin-Impact, [072] 캐릭터 조작 개선
 
+### 01.11 fri
+Ganshin-Impact, [072] 캐릭터 조작 개선 - riko 스킬 추가
