--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -27,8 +27,15 @@ Ganshin-Impact, [080] Zenject제거
 ### 01.10 wed
 Ganshin-Impact, [044] 오브젝트 관리
 
-### 01.10 thu
+### 01.11 thu
 Ganshin-Impact, [072] 캐릭터 조작 개선
 
-### 01.11 fri
+### 01.112 fri
 Ganshin-Impact, [072] 캐릭터 조작 개선 - riko 스킬 추가
+
+### 01.13 sat
+Ganshin-Impact, [072] 캐릭터 조작 개선 - 머슬캣 스킬 조정
+
+### 01.14 sun
+Ganshin-Impact, [072] 캐릭터 조작 개선 - AI 스킬2 추가
+
