--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -39,3 +39,5 @@ Ganshin-Impact, [072] 캐릭터 조작 개선 - 머슬캣 스킬 조정
 ### 01.14 sun
 Ganshin-Impact, [072] 캐릭터 조작 개선 - AI 스킬2 추가
 
+### 01.15 mon
+Ganshin-Impact, [073] ai 캐릭터 추가
