--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -1,3 +1,6 @@
+## 영상 업로드
+[유니티 RPG 게임 캐릭터 - GanShin-Impact](https://www.youtube.com/watch?v=2vaQIPE_Z44)<br>
+
 ### 01.01 mon
 
 input-music - Gan3DAudioVisualizer<br>
@@ -41,3 +44,7 @@ Ganshin-Impact, [072] 캐릭터 조작 개선 - AI 스킬2 추가
 
 ### 01.15 mon
 Ganshin-Impact, [073] ai 캐릭터 추가
+
+### 01.16 tue
+Ganshin-Impact, [082] 프로젝트 초기화 -> 에디터 / 빌드 환경 구분<br>
+빌드 테스트 후 영상 촬영
