--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -48,3 +48,6 @@ Ganshin-Impact, [073] ai 캐릭터 추가
 ### 01.16 tue
 Ganshin-Impact, [082] 프로젝트 초기화 -> 에디터 / 빌드 환경 구분<br>
 빌드 테스트 후 영상 촬영
+
+### 01.24 wed
+Rookiss MMO Lab 1기. 1.1 - UI
