--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -51,3 +51,6 @@ Ganshin-Impact, [082] 프로젝트 초기화 -> 에디터 / 빌드 환경 구분
 
 ### 01.24 wed
 Rookiss MMO Lab 1기. 1.1 - UI
+
+### 01.25 thu
+Rookiss MMO Lab 1기. 1.2 - Hero
