--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -55,5 +55,11 @@ Rookiss MMO Lab 1기. 1.1 - UI
 ### 01.25 thu
 Rookiss MMO Lab 1기. 1.2 - Hero
 
-### 01.25 fri
+### 01.26 fri
 Rookiss MMO Lab 1기. 1.2
+
+### 01.27 sat
+Rookiss MMO Lab 1기. 1.3 - Data
+
+### 01.28 sun
+Rookiss MMO Lab 1기. 1.3
