--- a/_/2024_01.md
+++ b/_/2024_01.md
@@ -63,3 +63,9 @@ Rookiss MMO Lab 1기. 1.3 - Data
 
 ### 01.28 sun
 Rookiss MMO Lab 1기. 1.3
+
+### 01.29 mon
+Honglab Data struct 2. recursion
+
+### 01.30 tue
+Rookiss MMO Lab 1기. 2.1 - Data and refactoring
