--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -1,3 +1,9 @@
 
-### 02.05 tue
+### 02.05 mon
 Rookiss MMO Lab 1기. 1.4 - Skill
+
+### 02.06 tue
+Rookiss MMO Lab 1기. 1.4 - Projectile
+
+### 02.07 wed
+Rookiss MMO Lab 1기. 1.4 - Projectile Motion
