--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -7,3 +7,6 @@ Rookiss MMO Lab 1기. 1.4 - Projectile
 
 ### 02.07 wed
 Rookiss MMO Lab 1기. 1.4 - Projectile Motion
+
+### 02.08 thu
+Rookiss MMO Lab 1기. 2.1. MapManager
